fix: horizontal scrolling in right direction in input text field triggers next word Fixes #2

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ input[type="number"] {
 #spellInput {
     width: 65%;
     font-size: 1.1rem;
-    text-align: center;
+    text-align: left;
 }
 
 #feedback {
